--- a/Nginx/ja-nginx-service.yml
+++ b/Nginx/ja-nginx-service.yml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ja-nginx-service
+  namespace: ja-nginx-env
 spec:
     selector:
       app: ja-nginx
+    type: LoadBalancer
     ports:
-    - name: ja-nginx-http
-      port: 80
-      protocol: TCP
-      targetPort: 8080
+     - protocol: TCP
+       port: 8080
+       targetPort: 8080
+       nodePort: 30004
