--- a/Kustomize-Mongo/base/mongo-express-deploy.yaml
+++ b/Kustomize-Mongo/base/mongo-express-deploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ja-mongo-express-deploy
+  name: mongo-express-deploy
   labels:
     app: ja-mongo-express
 spec:
@@ -23,15 +23,15 @@ spec:
             - name: ME_CONFIG_MONGODB_ADMINUSERNAME
               valueFrom:
                 secretKeyRef:
-                  name: ja-mongo-creds
+                  name: mongo-creds
                   key: mongodbadmin-username
             - name: ME_CONFIG_MONGODB_ADMINPASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: ja-mongo-creds
+                  name: mongo-creds
                   key: mongodbadmin-password
             - name: ME_CONFIG_MONGODB_SERVER
               valueFrom:
                 configMapKeyRef:
-                  name: ja-mongo-configmap
+                  name: mongo-configmap
                   key: mongo_database_url
