--- a/Kustomize-Mongo/base/mongo-secrets.yaml
+++ b/Kustomize-Mongo/base/mongo-secrets.yaml
@@ -1,7 +1,7 @@
   apiVersion: v1
   kind: Secret
   metadata:
-    name: ja-mongo-creds
+    name: mongo-creds
   type: Opaque
   data:   #jausername japassword
     mongodbadmin-username: amF1c2VybmFtZQ==
