--- a/Kustomize-Mongo/base/mongo-services.yaml
+++ b/Kustomize-Mongo/base/mongo-services.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ja-mongo-db-service
+  name: mongo-db-service
   labels:
-    app: mongo-db-service
+    app: mongodb-service
 spec:
   selector:
     app: ja-mongo-db
@@ -15,9 +15,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: ja-mongo-express-service
+  name: mongo-express-service
   labels:
-    app: mongo-express-service
+    app: mongoexpress-service
 spec:
   selector:
     app: ja-mongo-express
