--- a/MongoDb-MongoExpress/mongo-config-map.yaml
+++ b/MongoDb-MongoExpress/mongo-config-map.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mongo-configmap
+  name: ja-mongo-configmap
 data:
   mongo_database_url: ja-mongo-db-service
