--- a/MongoDb-MongoExpress/mongo-db-deploy.yaml
+++ b/MongoDb-MongoExpress/mongo-db-deploy.yaml
@@ -23,10 +23,10 @@ spec:
         - name: MONGO_INITDB_ROOT_USERNAME
           valueFrom:
             secretKeyRef:
-              name: mongo-creds
+              name: ja-mongo-creds
               key: mongodbadmin-username
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: mongo-creds
+              name: ja-mongo-creds
               key: mongodbadmin-password
