--- a/MongoDb-MongoExpress/mongo-express-deploy.yaml
+++ b/MongoDb-MongoExpress/mongo-express-deploy.yaml
@@ -23,15 +23,15 @@ spec:
             - name: ME_CONFIG_MONGODB_ADMINUSERNAME
               valueFrom:
                 secretKeyRef:
-                  name: mongo-creds
+                  name: ja-mongo-creds
                   key: mongodbadmin-username
             - name: ME_CONFIG_MONGODB_ADMINPASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mongo-creds
+                  name: ja-mongo-creds
                   key: mongodbadmin-password
             - name: ME_CONFIG_MONGODB_SERVER
               valueFrom:
                 configMapKeyRef:
-                  name: mongo-configmap
+                  name: ja-mongo-configmap
                   key: mongo_database_url
