updated kustomize with overlays and patch

--- a/Kustomize-Mongo/base/kustomization.yaml
+++ b/Kustomize-Mongo/base/kustomization.yaml
@@ -1,9 +1,5 @@
 resources:
-  - mongo-db-deploy.yaml
-  - mongo-express-deploy.yaml
-  - mongo-secrets.yaml
-  - mongo-services.yaml
-
-namePrefix: ja-
-commonAnnotations:
-  version: 0.0.1
+   - mongo-db-deploy.yaml
+   - mongo-express-deploy.yaml
+   - mongo-db-service.yaml
+   - mongo-express-service.yaml
