--- a/Kustomize-Mongo/overlays/pre-prod/kustomization.yaml
+++ b/Kustomize-Mongo/overlays/pre-prod/kustomization.yaml
@@ -1,9 +1,16 @@
 bases:
-- ../../base
-namePrefix: ja-prd-
+- ../../base/
+namePrefix: ja-pre-prod-
 commonLabels:
   env: pre-prod
-
+configMapGenerator:
+- name: mongo-configmap
+  files:
+  - mongo-configmap.config
+secretGenerator:
+- name: mongo-creds
+  behavior: create
+  envs:
+  - mongo-secret.env  # This should be in env format for key pair values
 patches:
-- deployment.yaml
-- service.yaml
+- patch.yaml   # Patching to update NodePort
