updated Kustomize folder with Namespace

--- a/Kustomize-Mongo/overlays/pre-prod/kustomization.yaml
+++ b/Kustomize-Mongo/overlays/pre-prod/kustomization.yaml
@@ -3,6 +3,7 @@ bases:
 namePrefix: ja-pre-prod-
 commonLabels:
   env: pre-prod
+namespace: pre-prod
 configMapGenerator:
 - name: mongo-configmap
   files:
