--- a/Kustomize-Mongo/overlays/stage/kustomization.yaml
+++ b/Kustomize-Mongo/overlays/stage/kustomization.yaml
@@ -3,10 +3,11 @@ bases:
 namePrefix: ja-stage-
 commonLabels:
   env: stage
+namespace: stage
 configMapGenerator:
 - name: mongo-configmap
-  files:
-  - mongo-configmap.config
+  envs:
+  - mongo-configmap.env
 secretGenerator:
 - name: mongo-creds
   behavior: create
